--- a/app/views/students/_student_tc_generate.html.erb
+++ b/app/views/students/_student_tc_generate.html.erb
@@ -21,4 +21,4 @@
 <br/>
 <br/>
 <%= link_to " ► #{t('generate_tc')}",
-        {:controller => "student", :action => "generate_tc_pdf", :id => @student.admission_no},:target => '_blank', :class=> 'user_button' %>
+        {:controller => "students", :action => "generate_tc_pdf", :id => @student.admission_no},:target => '_blank', :class=> 'user_button' %>
