--- a/app/views/students/admission2.html.erb
+++ b/app/views/students/admission2.html.erb
@@ -43,7 +43,7 @@
           end %>
         </div>
         <div id="skip">
-            <%= link_to "► #{t('finish')}", {:controller => "student", :action => "admission3", :id => @student.id }, :class => "user_button" %>
+            <%= link_to "► #{t('finish')}", {:controller => "students", :action => "admission3", :id => @student.id }, :class => "user_button" %>
         </div>
         <script type="text/javascript">
           Event.observe(window, 'load', function() { $('admission1_form').hide(); });
@@ -223,7 +223,7 @@
         <%= submit_tag "", :value => " ► #{t('finish')}",  :name => "commit", :class => "submit_button3" %>
       </div>
       <div id="skip">
-        <%= link_to "► #{t('click_here_to_skip')}", {:controller => "student", :action => "admission3", :id => @student.id }, :class => "user_button" %>
+        <%= link_to "► #{t('click_here_to_skip')}", {:controller => "students", :action => "admission3", :id => @student.id }, :class => "user_button" %>
       </div>
 
     </div>
