--- a/app/views/subjects/_subjects.html.erb
+++ b/app/views/subjects/_subjects.html.erb
@@ -53,7 +53,7 @@
             <% end %>
           </div>
           <% unless subject.elective_group_id.nil? %>
-            <div class="category-assign"><%= link_to "#{ t('assign_student')}", :controller=>"student", :action=>"electives",:id=>@batch,:id2=>subject.id%>
+            <div class="category-assign"><%= link_to "#{ t('assign_student')}", :controller=>"students", :action=>"electives",:id=>@batch,:id2=>subject.id%>
             </div>
           <% end %>
         </div>
@@ -98,7 +98,7 @@
               <% end %>
             </div>
             <% unless subject.elective_group_id.nil? %>
-              <div class="category-assign"><%= link_to "#{ t('assign_student')}", :controller=>"student", :action=>"electives",:id=>@batch,:id2=>subject.id%>
+              <div class="category-assign"><%= link_to "#{ t('assign_student')}", :controller=>"students", :action=>"electives",:id=>@batch,:id2=>subject.id%>
               </div>
             <% end %>
           </div>
