--- a/app/views/news/all.erb
+++ b/app/views/news/all.erb
@@ -23,13 +23,13 @@
   <h1><%= t('school_news') %></h1>
   <h3><%= t('latest_announcement') %></h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to image_tag("buttons/back.png", border: 0), 'javascript:void(0);', onclick: "history.back()" %>
   </div>
 </div>
 <div id="inner-tab-menu">
   <ul>
     <% if permitted_to? :add,:news %>
-      <li><%= link_to "#{t('add')}", :controller => 'news', :action => 'add' %></li>
+      <li><%= link_to t('add'), controller: :news, action: :add %></li>
     <% end %>
   </ul>
 </div>
