--- a/app/views/students/_students_by_course.erb
+++ b/app/views/students/_students_by_course.erb
@@ -40,7 +40,7 @@
         </td>
 
         <td class="col-2">
-          <%= link_to r.full_name,:controller => "student", :action => "profile", :id => r.id %>
+          <%= link_to r.full_name,:controller => "students", :action => "profile", :id => r.id %>
         </td>
 
         <td class="col-1">
@@ -48,7 +48,7 @@
         </td>
 
         <td class="col-7">
-          <%=  link_to  "#{t('view_profile')}", :controller => "student", :action => "profile", :id => r.id %>
+          <%=  link_to  "#{t('view_profile')}", :controller => "students", :action => "profile", :id => r.id %>
         </td>
       </tr>
     <% end %>
