--- a/app/views/students/index.erb
+++ b/app/views/students/index.erb
@@ -30,8 +30,8 @@
 
 <div id="inner-tab-menu">
   <ul>
-    <li><%= link_to t('view_all'), :controller=>"student", :action=>"view_all" %></li>
-    <li><%= link_to t('advanced'), :controller=>"student", :action=>"advanced_search" %></li>
+    <li><%= link_to t('view_all'), :controller=>"students", :action=>"view_all" %></li>
+    <li><%= link_to t('advanced'), :controller=>"students", :action=>"advanced_search" %></li>
   </ul>
 </div>
 
