--- a/app/views/students/show_previous_details.erb
+++ b/app/views/students/show_previous_details.erb
@@ -100,7 +100,7 @@
     <% if permitted_to? :previous_data_edit,:student %>
     <div class="buttons">
       <%= link_to " ► #{t('edit_text')}",
-        { :controller => "student", :action => "previous_data_edit", :id => @student.id },:class => "user_button"%>
+        { :controller => "students", :action => "previous_data_edit", :id => @student.id },:class => "user_button"%>
     </div>
     <% end %>
     <div class="extender"></div>
