--- a/app/views/timetables/_table.html.erb
+++ b/app/views/timetables/_table.html.erb
@@ -20,13 +20,13 @@
 <div id="register">
   <div class="header">
     <div class="prev">
-      <%= link_to_remote "◄", :url=>{:controller=>"timetable", :action=>"timetable",:next=>(@today-1.day)} %>
+      <%= link_to "◄", url_for(controller: :timetables, action: :timetable, next: (@today-1.day)), remote: true %>
     </div>
     <div class="month">
       <%= I18n.l(@today,:format=>" %d %B %Y") %>
     </div>
     <div class="next">
-      <%= link_to_remote "►", :url=>{:controller=>"timetable", :action=>"timetable",:next=>(@today+1.day)} %>
+      <%= link_to "►", url_for(controller: :timetables, action: :timetable, next=>(@today+1.day)), remote: true %>
     </div>
     <div class="extender"></div>
   </div>
