--- a/app/views/timetables/student_view.erb
+++ b/app/views/timetables/student_view.erb
@@ -23,7 +23,7 @@
   <h3><%= t('view') %></h3>
 
   <div id="app-back-button">
-    <%= link_to image_tag("buttons/back.png",:border => 0), 'javascript: void(0)', onclick: "history.back()" %>
+    <%= link_to image_tag("buttons/back.png", border: 0), 'javascript: void(0)', onclick: "history.back()" %>
   </div>
 
 </div>
@@ -37,15 +37,11 @@
   <%= form_for :timetable_entry do |s| %>
     <div class="label-field-pair">
       <label for="timetable_entry_course_id"><%= t('select_a_tte') %></label>
-      <%= image_tag("loader.gif",
-        :align => "absmiddle",
-        :border => 0,
-        :id => "loader",
-        :style =>"display: none;" ) %>
+      <%= image_tag("loader.gif", align: :absmiddle, border: 0, id: :loader, style: "display: none;" ) %>
       <div class="text-input-bg">
         <%= select :timetable_entry, :timetable_id, @timetables.map {|c| ["#{c.start_date.strftime("%d %b %Y")} - #{c.end_date.strftime("%d %b %Y")}", c.id]},
           { selected: @current.present? ? @current.id : nil, prompt: t('select_a_tte')},
-          { onChange: "#{remote_function( url: { action: "update_student_tt", timetable_id: "value", id: "#{@student.id}"}, :with => "'timetable_id='+value+'&id='+#{@student.id}", before: "Element.show('loader')", success: "Element.hide('loader')")}"} %>
+          { onChange: "onChangeRequest(this, '#{url_for(action: :update_student_tt, timetable_id: 'paramid', id: @student.id)})"} %>
       </div>
     </div>
   <% end %>
