--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -27,7 +27,7 @@
 </div>
 <% if @current_user.admin? and @current_user.id != @user.id %>
   <div id="inner-tab-menu">
-    <ul><li><%= link_to t('change_password'), :controller => "user", :action => "user_change_password", :id =>@user.username %></li></ul>
+    <ul><li><%= link_to t('change_password'), controller: :users, action: :user_change_password, id: @user.username %></li></ul>
   </div>
 <% end %>
 
@@ -82,7 +82,7 @@
           </div>
         </div>
         <div class="submit_div">
-          <%= link_to "► #{t('delete_text')}", { :controller => "user", :action => "delete", :id => @user.username}, :class => "user_button", :confirm=>"#{t('are_you_sure_to_delete_user')}" %>
+          <%= link_to "► #{t('delete_text')}", { controller: :users, action: :delete, id: @user.username}, class: :user_button, confirm: t('are_you_sure_to_delete_user'), method: :DELETE %>
         </div>
     <%#= submit_tag "", :value => "► #{t('update')}", :class => "user_submit_button" %>
       <% end  %>
