--- a/app/views/users/_parent_user.erb
+++ b/app/views/users/_parent_user.erb
@@ -18,12 +18,11 @@
 #under the License. -%>
 
 <div class="label-field-pair">
-  <div class="text-input-bg"><%= select :batch, :batch_id,
+  <div class="text-input-bg">
+    <%= select :batch, :batch_id,
       Batch.active.map {|c| [c.full_name, c.id]},
-      {:prompt => "#{t('select_a_course')}"},
-      {:onChange => "#{remote_function(:url => {:action => "list_parent_user"},
-      :with => "'batch_id='+value",
-      :before => "Element.show('loader')",
-      :success => "Element.hide('loader')"
-      )}"} %></div>
+      { prompt: t('select_a_course')},
+      { onChange: "onChangeRequest(this, '#{url_for(action: :list_parent_user, batch_id: 'paramid')}')"}
+    %>
+  </div>
 </div>
