--- a/app/views/users/_student_user.erb
+++ b/app/views/users/_student_user.erb
@@ -18,12 +18,10 @@
 #under the License. -%>
 
  <div class="label-field-pair">
-    <div class="text-input-bg"><%= select :batch, :batch_id,
-      Batch.active.all.map {|c| [c.full_name, c.id]},
-      {:prompt => "#{t('select_a_batch')}"},
-      {:onChange => "#{remote_function(:url => {:action => "list_student_user"},
-        :with => "'batch_id='+value",
-        :before => "Element.show('loader')",
-        :success => "Element.hide('loader')"
-        )}"} %></div>
+    <div class="text-input-bg">
+      <%= select :batch, :batch_id,
+        Batch.active.all.map {|c| [c.full_name, c.id]},
+        { prompt: t('select_a_batch')},
+        { onChange: "onChangeRequest(this, '#{url_for(action: :list_student_user, batch_id: 'paramid')}')"} %>
+    </div>
   </div>
