--- a/app/views/users/_users.erb
+++ b/app/views/users/_users.erb
@@ -23,48 +23,25 @@
   <div class="students-table">
     <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
       <tr class="tr-head">
-        <td>
-          <%= t('sl_no') %>
-        </td>
-        <td>
-          <%= t('name') %>
-        </td>
-        <td>
-        <%= t('username') %>
-        </td>
-        <td>
-        
-        </td>
+        <td><%= t('sl_no') %></td>
+        <td><%= t('name') %></td>
+        <td><%= t('username') %></td>
+        <td></td>
       </tr>
       <tr>
-        <td>
-
-        </td>
-        <td>
-
-        </td>
-        <td>
-
-        </td>
-        <td>
-
-        </td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <% @users.each_with_index do |user,i| %>
         <tr class="tr-<%= cycle('odd', 'even') %>">
-          <td class="col-1">
-            <%= i+1 %>
-          </td>
-          <td class="col-2">
-      <%=  user.full_name %>
-          </td>
-          <td class="col-3">
-            <%= user.username %>
-          </td>
+          <td class="col-1"><%= i+1 %></td>
+          <td class="col-2"><%=  user.full_name %></td>
+          <td class="col-3"><%= user.username %></td>
           <td class="col-4">
-            <%= link_to "#{t('view_profile')}", :controller => 'user', :action => 'profile', :id => user.username  %>
+            <%= link_to t('view_profile'), controller: :users, action: :profile, id: user.username  %>
           </td>
-
         </tr>
       <% end %>
     </table>
