--- a/app/views/users/all.erb
+++ b/app/views/users/all.erb
@@ -22,7 +22,7 @@
   <h1><%= t('all_users') %></h1>
   <h3><%= t('details_about_user') %></h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to image_tag("buttons/back.png", border: 0), 'javascript:void(0);', onclick: "history.back()" %>
   </div>
 </div>
 
@@ -31,19 +31,10 @@
   <% unless flash[:notice].nil? %><p class="flash-msg"> <%= flash[:notice] %> </p><% end %>
   <div class="all-user">
     <div class="label-field-pair">
-      <div class="text-input-bg"><%= select :user_type, :type, [["#{t('admin')}","Admin"], ["#{t('employee_text')}","Employee"],["#{t('student_text')}","Student"],["#{t('parent')}","Parent"]],
-          {:prompt => "#{t('select_a_role')}"},
-          {:onChange => "#{remote_function(:url => {:action => "list_user"},
-          :with => "'user_type='+value",
-          :before => "Element.show('loader')",
-          :success => "Element.hide('loader')"
-          )}"} %>
+      <div class="text-input-bg">
+        <%= select :user_type, :type, [[t('admin'),"Admin"], [t('employee_text'),"Employee"],[t('student_text'),"Student"],[t('parent'),"Parent"]], { prompt: t('select_a_role')}, { onChange: "onChangeRequest(this, '#{url_for(action: :list_user, user_type: 'paramid')}')"} %>
       </div>
-      <%= image_tag("loader.gif",
-        :align => "absmiddle",
-        :border => 0,
-        :id => "loader",
-        :style =>"display: none;" ) %>
+      <%= image_tag("loader.gif", align: :absmiddle, border: 0, id: :loader, style: "display: none;") %>
 
     </div>
     <div id="student_user">
