--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -22,14 +22,15 @@
   <h1><%= t('manage_users') %></h1>
   <h3><%= t('detailed_about_user') %></h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to image_tag("buttons/back.png", border: 0), 'javascript
+    :void(0);', onclick: "history.back()" %>
   </div>
 </div>
 
 <div id="inner-tab-menu">
   <ul>
-    <li><%= link_to "#{t('view_all')}", :action => "all" %></li>
-    <li><%= link_to "#{t('add_new')}", :action => "create" %></li>
+    <li><%= link_to t('view_all'), action: :all %></li>
+    <li><%= link_to t('add_new'), action: :create %></li>
   </ul>
 </div>
 <div id="page-yield">
@@ -38,13 +39,9 @@
     <div id="searchbox">
       <form name="search-form" id="search-form">
         <label for="query"><%= t('search_user') %>
-          <%= image_tag("loader.gif",
-            :align => "absmiddle",
-            :border => 0,
-            :id => "loader",
-            :style =>"display: none;" ) %>
+          <%= image_tag("loader.gif", align: :absmiddle, border: 0, id: :loader, style: "display: none;" ) %>
         </label>
-        <%= text_field_tag "query", params[:query], :autocomplete => 'off' %>
+        <%= text_field_tag "query", params[:query], autocomplete:  'off' %>
       </form>
     </div>
   </div>
@@ -62,17 +59,18 @@
   <script type="text/javascript">
     function search_user_ajax(){
       if ($('query').value.include("%")) return;
-<%="#{remote_function(:url => {:action => "search_user_ajax"},
-:with =>  "'query='+ $('query').value",
-:before => "Element.show('loader')",
-:success => "Element.hide('loader')",
-:update=>"user_information"
-)}"%>
-  }
+      onChangeRequest($('query'), '<%= url_for(action: :search_user_ajax, query: "paramid") %>' );
+      <%#="#{remote_function(:url => {:action => "search_user_ajax"},
+      :with =>  "'query='+ $('query').value",
+      :before => "Element.show('loader')",
+      :success => "Element.hide('loader')",
+      :update=>"user_information"
+      )}"%>
+    }
 
-  document.observe("dom:loaded", function() {
-    new Form.Element.Observer('query', 1, search_user_ajax);
-  });
+    jQuery(document).on("page:load ready", function() {
+      new Form.Element.Observer('query', 1, search_user_ajax);
+    });
 
   </script>
 
