--- a/app/views/exam/settings.html.erb
+++ b/app/views/exam/settings.html.erb
@@ -18,11 +18,11 @@
 #under the License. -%>
 
 <div id="content-header">
-  <%= image_tag("  examination/show_exam.png") %>
+  <%= image_tag("examination/show_exam.png") %>
   <h1><%= t('exams_text') %></h1>
   <h3><%= t('settings') %></h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("  buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to image_tag("buttons/back.png", border: 0), 'javascript:void(0);', onclick: "history.back()" %>
   </div>
 </div>
 
@@ -35,26 +35,34 @@
   <div class="box">
     <%  if permitted_to? :index,:grading_levels %>
       <div class="link-box">
-        <div class="link-heading"><%= link_to "#{t('set_grading_levels')}" ,:controller=>'grading_levels',:action=>'index' %> </div>
+        <div class="link-heading">
+          <%= link_to t('set_grading_levels'), controller: :grading_levels, action: :index %>
+        </div>
         <div class="link-descr"><%= t('set_grading_levels') %></div>
       </div>
     <% end %>
-    <%  if permitted_to? :index,:ranking_levels %>
+    <%  if permitted_to? :index, :ranking_levels %>
       <div class="link-box">
-        <div class="link-heading"><%= link_to "#{t('ranking_levels_text')}" ,:controller=>'ranking_levels',:action=>'index' %> </div>
+        <div class="link-heading">
+          <%= link_to t('ranking_levels_text'), controller: :ranking_levels, action: :index %>
+        </div>
         <div class="link-descr"><%= t('manage_ranking_levels') %></div>
       </div>
     <% end %>
     <%  if permitted_to? :index,:class_designations %>
       <div class="link-box">
-        <div class="link-heading"><%= link_to "#{t('class_designations_text')}" ,:controller=>'class_designations',:action=>'index' %> </div>
+        <div class="link-heading">
+          <%= link_to t('class_designations_text'), controller: :class_designations, action: :index %>
+        </div>
         <div class="link-descr"><%= t('manage_class_designations') %></div>
       </div>
     <% end %>
     <%  if Settings.cce_enabled? %>
       <%  if permitted_to? :index,:cce_settings %>
         <div class="link-box">
-          <div class="link-heading"><%= link_to "#{t('cce_sttings')}" ,:controller=>'cce_settings',:action=>'index' %> </div>
+          <div class="link-heading">
+            <%= link_to t('cce_sttings'), controller: :cce_settings, action: :index %>
+          </div>
           <div class="link-descr"><%= t('manage_cce_settings') %></div>
         </div>
       <% end %>
