--- a/app/views/news/view.erb
+++ b/app/views/news/view.erb
@@ -18,60 +18,58 @@
 #under the License. -%>
 
 <div id="content-header">
-<%= image_tag("show_news/show_news_logo.png") %>
+  <%= image_tag("show_news/show_news_logo.png") %>
   <h1><%= t('news_text') %></h1>
   <h3><%= t('read_news') %></h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to image_tag("buttons/back.png", border: 0), 'javascript:void(0);', onclick: "history.back()" %>
   </div>
 </div>
 
 <div id="page-yield">
+  <% unless flash[:notice].nil? %>
+    <p class="flash-msg"> <%= flash[:notice] %> </p>
+  <% end %>
 
-  <% unless flash[:notice].nil? %> <p class="flash-msg"> <%= flash[:notice] %> </p> <% end %>
-
-    <div id="news_title">
-      <%= @news.title %>
-    </div>
-    <div id="create_date" class="themed_text">
-      <%= t('posted_on') %> <%= I18n.l(@news.created_at,:format=>"%A, %d %B, %Y") %>
-    </div>
-    <div id="news_content">
-      <%= sanitize @news.content , :tags => %w[b i a h1 h2 h3 u li ol strike p img font span sup sub tr td table th tbody thead strong em], :attributes => %w[href src style border cellspacing cellpadding]%>
-    </div>
+  <div id="news_title">
+    <%= @news.title %>
+  </div>
+  <div id="create_date" class="themed_text">
+    <%= t('posted_on') %> <%= I18n.l(@news.created_at,:format=>"%A, %d %B, %Y") %>
+  </div>
+  <div id="news_content">
+    <%= sanitize @news.content , :tags => %w[b i a h1 h2 h3 u li ol strike p img font span sup sub tr td table th tbody thead strong em], :attributes => %w[href src style border cellspacing cellpadding]%>
+  </div>
 
   <% if @is_moderator %>
 
-      <%= link_to "► #{t('edit_text')} #{t('news_text')}",
-        {:controller => "news",  :action => "edit", :id => @news.id }, :class => "edit_button user_button"%>
+    <%= link_to "► #{t('edit_text')} #{t('news_text')}", {controller: :news,  action:  :edit, id: @news.id }, class: "edit_button user_button" %>
 
-  <div id="">
-      <%= link_to "► #{t('delete_text')} #{t('news_text')}",
-        { :controller => "news", :action => "delete", :id => @news.id },
-        :confirm => "#{t('delete_confirm_msg')}", :class => "delete_button user_button" %>
+    <div id="">
+      <%= link_to "► #{t('delete_text')} #{t('news_text')}", { controller: :news, action: :delete, id: @news.id }, confirm: t('delete_confirm_msg'), class: "delete_button user_button", method: :DELETE %>
 
     </div>
-  <div class="extender"></div>
+    <div class="extender"></div>
   <% end %>
 
   <h3 id="comments-heading"><%= t('comments') %></h3>
 
-
-      <span id="comments-count"><% if @comments.empty? %><%= t('no_comments') %><% end %></span>
-
+  <span id="comments-count"><% if @comments.empty? %><%= t('no_comments') %><% end %></span>
 
   <ul id="comments-list">
-    <% @comments.each do |@cmnt| %>
-      <%= render :partial => "comment" %>
+    <% @comments.each do |cmnt| %>
+      <%= render "comment", cmnt: cmnt %>
     <% end %>
   </ul>
 
   <h4 id="leave-a-comment"><%= t('leave_comment') %></h4>
 
-  <% form_remote_for :comment, :id => 'comments-form', :url => { :action => 'add_comment' } do |f| %>
-  <div class="comment-content"> <%= f.text_area :content %> </div>
-    <%= f.hidden_field :news_id, :value => @news.id %>
-    <div id="submit-button"><%= submit_tag '', :value =>"► #{t('submit')}" %></div>
+  <%= form_for :comment, id: 'comments-form', url: { action: :add_comment }, remote: true do |f| %>
+    <div class="comment-content"> <%= f.text_area :content %> </div>
+    <%= f.hidden_field :news_id, value: @news.id %>
+    <div id="submit-button">
+      <%= submit_tag '', value: "► #{t('submit')}" %>
+    </div>
   <% end %>
 
 </div>
