--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,9 +29,7 @@
       <link rel="shortcut icon" href="<%=current_school_detail.logo.url%>" type="<%=current_school_detail.logo.content_type%>" />
     <% end %>
 
-    <% get_stylesheets.each do |s| %>
-      <%= stylesheet_link_tag s, media: 'all'%>
-    <% end %>
+    <%= stylesheet_link_tag(*get_stylesheets, media: :all) %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 
     <%#= javascript_include_tag :defaults, :cache => 'cache/javascripts/all' %>
